[fix] unintended text wrap

--- a/components/views/recipe/style.module.css
+++ b/components/views/recipe/style.module.css
@@ -50,7 +50,7 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 3em;
+    width: 3.2em;
     height: 1.5em;
 
     font-size: .8em;
